assets/css/main.scss
---
# Only the main Sass file needs front matter (the dashes are enough)
search: false
---

@charset "utf-8";

$serif: 'Roboto Slab', serif;
$sans-serif: 'Roboto', sans-serif;
$monospace: 'Inconsolata', monospace;

$--content-size: 0.85rem;

@import "minimal-mistakes/skins/{{ site.minimal_mistakes_skin | default: 'default' }}"; // skin
@import "minimal-mistakes"; // main partials

html {
  font-size: 20px;

  @include breakpoint($x-large) {
    font-size: 22px;
  }
}

.page__title+.page__meta,
.page__title+.comment__date {
  margin-top: -calc(#{$--content-size} / 2);
}

.page__inner-wrap {
  header>* {
    margin-bottom: $--content-size;
  }
}

.page__content {
  overflow-wrap: break-word;

  > {
    blockquote,
    ol,
    p,
    ul {
      font-size: $--content-size;
    }
  }

  blockquote {
    font-style: normal;
    margin: 0 0 1em;
    padding: 0 1em;
  }

  h1,
  h2 {
    margin: calc(#{$--content-size} * 2) 0 calc(#{$--content-size} / 2);
    padding-bottom: calc(#{$--content-size} / 2);
  }

  h3,
  h4,
  h5,
  h6 {
    margin: calc(#{$--content-size} * 2) 0 $--content-size;
  }

  p {
    margin: 0 0 1em;
  }

  a>code,
  figcaption>code,
  li>code,
  p>code,
  td>code {
    background: rgba(175, 184, 193, 0.2);
    display: inline-block;
    font-size: 0.75rem;
    font-weight: 500;
    line-height: 1;
    padding: 0.15em 0;
    vertical-align: middle;
  }

  div.highlighter-rouge,
  figure.highlight {  
    font-size: 0.7rem;
    font-weight: 500;
    line-height: 1.3;
    margin: 0 0 $--content-size;
  }

  .sidebar__right {
    li {
      font-size: 1em;
    }
    
    .nav__title {
      margin: 0;

      i {
        display: none;
      }
    }
  }
}

